관리자 제출 상세 조회 권한 검증 및 리뷰 반영